// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. key facts with title 1`] = `
<View>
  <Text>
    EXAMPLE TITLE
  </Text>
  <View>
    <View>
      <View />
      <Text>
        Example bullet text
      </Text>
    </View>
    <View>
      <View />
      <Text>
        An example 
        <Text
          accessibilityRole="link"
        >
          link
        </Text>
      </Text>
    </View>
    <View>
      <View />
      <Text>
        More example text.
      </Text>
    </View>
    <View>
      <View />
      <Text>
        Example text 
        <Text>
          this is bold 
        </Text>
        <Text>
          this is in italics.
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`2. key facts without title 1`] = `
<View>
  <View>
    <View>
      <View />
      <Text>
        Example bullet text
      </Text>
    </View>
    <View>
      <View />
      <Text>
        An example 
        <Text
          accessibilityRole="link"
        >
          link
        </Text>
      </Text>
    </View>
    <View>
      <View />
      <Text>
        More example text.
      </Text>
    </View>
    <View>
      <View />
      <Text>
        Example text 
        <Text>
          this is bold 
        </Text>
        <Text>
          this is in italics.
        </Text>
      </Text>
    </View>
  </View>
</View>
`;
